--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -5,7 +5,9 @@
    "id": "2bbfe154",
    "metadata": {},
    "source": [
-    "**Diabetic Patient Readmission -- Data Wrangling**"
+    "# **Diabetic Patient Readmission -- Data Wrangling**\n",
+    "\n",
+    "This dataset was analyzed by numerous Virginia Commonwealth University faculty in a recent research article which is accompanied by feature descriptions. These can be found at https://www.hindawi.com/journals/bmri/2014/781670/tab1/."
    ]
   },
   {
@@ -17,14 +19,23 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "df1 = pd.read_csv('diabetic_data.csv')\n",
     "df2 = pd.read_csv('IDs_mapping.csv')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54fa45eb",
+   "metadata": {},
+   "source": [
+    "**Data Collection:**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f98f01d7",
    "metadata": {},
    "outputs": [
@@ -99,41 +110,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "4ed4cf54",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          admission_type_id    description\n",
+      "0                         1      Emergency\n",
+      "1                         2         Urgent\n",
+      "2                         3       Elective\n",
+      "3                         4        Newborn\n",
+      "4                         5  Not Available\n",
+      "5                         6            NaN\n",
+      "6                         7  Trauma Center\n",
+      "7                         8     Not Mapped\n",
+      "8                       NaN            NaN\n",
+      "9  discharge_disposition_id    description\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 67 entries, 0 to 66\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column             Non-Null Count  Dtype \n",
+      "---  ------             --------------  ----- \n",
+      " 0   admission_type_id  65 non-null     object\n",
+      " 1   description        62 non-null     object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 1.2+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df2.head(10))\n",
+    "print(df2.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4db4d7cb",
+   "metadata": {},
+   "source": [
+    "**Data Organization:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6c630984",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   admission_type_id                                        description\n",
-      "15                 6  Discharged/transferred to home with home healt...\n",
-      "6                  7                                      Trauma Center\n",
-      "50                 9                                      Not Available\n",
-      "34                25                                         Not Mapped\n",
-      "40               NaN                                                NaN\n",
-      "24                15  Discharged/transferred within this institution...\n",
-      "16                 7                                           Left AMA\n",
-      "2                  3                                           Elective\n",
-      "27                18                                                NaN\n",
-      "32                23  Discharged/transferred to a long term care hos...\n",
-      "17                 8  Discharged/transferred to home under care of H...\n",
-      "19                10  Neonate discharged to another hospital for neo...\n",
-      "23                14                         Hospice / medical facility\n",
-      "30                21    Expired, place unknown. Medicaid only, hospice.\n",
-      "51                10              Transfer from critial access hospital\n",
-      "55                14                                   Extramural Birth\n",
-      "60                20                                         Not Mapped\n",
-      "13                 4                      Discharged/transferred to ICF\n",
-      "33                24  Discharged/transferred to a nursing facility c...\n",
-      "58                18           Transfer From Another Home Health Agency\n"
+      "           admission_type_id  description\n",
+      "9   discharge_disposition_id  description\n",
+      "41       admission_source_id  description\n"
      ]
     }
    ],
    "source": [
-    "print(df2.sample(20))"
+    "print(df2[df2.description == 'description'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f983c62c",
+   "metadata": {},
+   "source": [
+    "The 'IDs_mapping.csv' seems to contain *multiple* tables containing key-value descriptions for designated IDs in the primary dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b775202a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  admission_type_id    description\n",
+      "0                 1      Emergency\n",
+      "1                 2         Urgent\n",
+      "2                 3       Elective\n",
+      "3                 4        Newborn\n",
+      "4                 5  Not Available\n",
+      "5                 6            NaN\n",
+      "6                 7  Trauma Center\n",
+      "7                 8     Not Mapped\n",
+      "   discharge_disposition_id                                        description\n",
+      "0                         1                                 Discharged to home\n",
+      "1                         2  Discharged/transferred to another short term h...\n",
+      "2                         3                      Discharged/transferred to SNF\n",
+      "3                         4                      Discharged/transferred to ICF\n",
+      "4                         5  Discharged/transferred to another type of inpa...\n",
+      "5                         6  Discharged/transferred to home with home healt...\n",
+      "6                         7                                           Left AMA\n",
+      "7                         8  Discharged/transferred to home under care of H...\n",
+      "8                         9          Admitted as an inpatient to this hospital\n",
+      "9                        10  Neonate discharged to another hospital for neo...\n",
+      "10                       11                                            Expired\n",
+      "11                       12  Still patient or expected to return for outpat...\n",
+      "12                       13                                     Hospice / home\n",
+      "13                       14                         Hospice / medical facility\n",
+      "14                       15  Discharged/transferred within this institution...\n",
+      "15                       16  Discharged/transferred/referred another instit...\n",
+      "16                       17  Discharged/transferred/referred to this instit...\n",
+      "17                       18                                                NaN\n",
+      "18                       19           Expired at home. Medicaid only, hospice.\n",
+      "19                       20  Expired in a medical facility. Medicaid only, ...\n",
+      "20                       21    Expired, place unknown. Medicaid only, hospice.\n",
+      "21                       22  Discharged/transferred to another rehab fac in...\n",
+      "22                       23  Discharged/transferred to a long term care hos...\n",
+      "23                       24  Discharged/transferred to a nursing facility c...\n",
+      "24                       25                                         Not Mapped\n",
+      "25                       26                                    Unknown/Invalid\n",
+      "26                       30  Discharged/transferred to another Type of Heal...\n",
+      "27                       27  Discharged/transferred to a federal health car...\n",
+      "28                       28  Discharged/transferred/referred to a psychiatr...\n",
+      "29                       29  Discharged/transferred to a Critical Access Ho...\n",
+      "   admission_source_id                                        description\n",
+      "0                    1                                 Physician Referral\n",
+      "1                    2                                    Clinic Referral\n",
+      "2                    3                                       HMO Referral\n",
+      "3                    4                           Transfer from a hospital\n",
+      "4                    5     Transfer from a Skilled Nursing Facility (SNF)\n",
+      "5                    6         Transfer from another health care facility\n",
+      "6                    7                                     Emergency Room\n",
+      "7                    8                              Court/Law Enforcement\n",
+      "8                    9                                      Not Available\n",
+      "9                   10              Transfer from critial access hospital\n",
+      "10                  11                                    Normal Delivery\n",
+      "11                  12                                 Premature Delivery\n",
+      "12                  13                                          Sick Baby\n",
+      "13                  14                                   Extramural Birth\n",
+      "14                  15                                      Not Available\n",
+      "15                  17                                                NaN\n",
+      "16                  18           Transfer From Another Home Health Agency\n",
+      "17                  19             Readmission to Same Home Health Agency\n",
+      "18                  20                                         Not Mapped\n",
+      "19                  21                                    Unknown/Invalid\n",
+      "20                  22   Transfer from hospital inpt/same fac reslt in...\n",
+      "21                  23                          Born inside this hospital\n",
+      "22                  24                         Born outside this hospital\n",
+      "23                  25            Transfer from Ambulatory Surgery Center\n",
+      "24                  26                              Transfer from Hospice\n"
+     ]
+    }
+   ],
+   "source": [
+    "admission_type_ids = df2[:8] # Adjusted from [:9] to remove NaN ID\n",
+    "discharge_disposition_ids = df2[10:40] # Adjusted from [10:41] to remove NaN ID\n",
+    "discharge_disposition_ids = discharge_disposition_ids.reset_index(drop=True).rename(columns={'admission_type_id':'discharge_disposition_id'})\n",
+    "admission_source_ids = df2[42:]\n",
+    "admission_source_ids = admission_source_ids.reset_index(drop=True).rename(columns={'admission_type_id':'admission_source_id'})\n",
+    "print(admission_type_ids)\n",
+    "print(discharge_disposition_ids)\n",
+    "print(admission_source_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c80dc05b",
+   "metadata": {},
+   "source": [
+    "As we have a singular, primary dataset that we will work with, there is no need for merging/joining at this stage. Introducing these descriptions into the dataset would likely complicate future analysis and modeling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2ea44c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving individual id libraries for future reference\n",
+    "admission_type_ids.to_csv('admission_type_ids.csv', index=False)\n",
+    "discharge_disposition_ids.to_csv('discharge_disposistion_ids.csv', index=False)\n",
+    "admission_source_ids.to_csv('admission_source_ids.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f49de989",
+   "metadata": {},
+   "source": [
+    "**Data Definition:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "216ab5bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
