--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -306,11 +306,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "216ab5bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 101766 entries, 0 to 101765\n",
+      "Data columns (total 50 columns):\n",
+      " #   Column                    Non-Null Count   Dtype \n",
+      "---  ------                    --------------   ----- \n",
+      " 0   encounter_id              101766 non-null  int64 \n",
+      " 1   patient_nbr               101766 non-null  int64 \n",
+      " 2   race                      101766 non-null  object\n",
+      " 3   gender                    101766 non-null  object\n",
+      " 4   age                       101766 non-null  object\n",
+      " 5   weight                    101766 non-null  object\n",
+      " 6   admission_type_id         101766 non-null  int64 \n",
+      " 7   discharge_disposition_id  101766 non-null  int64 \n",
+      " 8   admission_source_id       101766 non-null  int64 \n",
+      " 9   time_in_hospital          101766 non-null  int64 \n",
+      " 10  payer_code                101766 non-null  object\n",
+      " 11  medical_specialty         101766 non-null  object\n",
+      " 12  num_lab_procedures        101766 non-null  int64 \n",
+      " 13  num_procedures            101766 non-null  int64 \n",
+      " 14  num_medications           101766 non-null  int64 \n",
+      " 15  number_outpatient         101766 non-null  int64 \n",
+      " 16  number_emergency          101766 non-null  int64 \n",
+      " 17  number_inpatient          101766 non-null  int64 \n",
+      " 18  diag_1                    101766 non-null  object\n",
+      " 19  diag_2                    101766 non-null  object\n",
+      " 20  diag_3                    101766 non-null  object\n",
+      " 21  number_diagnoses          101766 non-null  int64 \n",
+      " 22  max_glu_serum             101766 non-null  object\n",
+      " 23  A1Cresult                 101766 non-null  object\n",
+      " 24  metformin                 101766 non-null  object\n",
+      " 25  repaglinide               101766 non-null  object\n",
+      " 26  nateglinide               101766 non-null  object\n",
+      " 27  chlorpropamide            101766 non-null  object\n",
+      " 28  glimepiride               101766 non-null  object\n",
+      " 29  acetohexamide             101766 non-null  object\n",
+      " 30  glipizide                 101766 non-null  object\n",
+      " 31  glyburide                 101766 non-null  object\n",
+      " 32  tolbutamide               101766 non-null  object\n",
+      " 33  pioglitazone              101766 non-null  object\n",
+      " 34  rosiglitazone             101766 non-null  object\n",
+      " 35  acarbose                  101766 non-null  object\n",
+      " 36  miglitol                  101766 non-null  object\n",
+      " 37  troglitazone              101766 non-null  object\n",
+      " 38  tolazamide                101766 non-null  object\n",
+      " 39  examide                   101766 non-null  object\n",
+      " 40  citoglipton               101766 non-null  object\n",
+      " 41  insulin                   101766 non-null  object\n",
+      " 42  glyburide-metformin       101766 non-null  object\n",
+      " 43  glipizide-metformin       101766 non-null  object\n",
+      " 44  glimepiride-pioglitazone  101766 non-null  object\n",
+      " 45  metformin-rosiglitazone   101766 non-null  object\n",
+      " 46  metformin-pioglitazone    101766 non-null  object\n",
+      " 47  change                    101766 non-null  object\n",
+      " 48  diabetesMed               101766 non-null  object\n",
+      " 49  readmitted                101766 non-null  object\n",
+      "dtypes: int64(13), object(37)\n",
+      "memory usage: 38.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f38799f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>encounter_id</th>\n",
+       "      <th>patient_nbr</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>payer_code</th>\n",
+       "      <th>A1Cresult</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>change</th>\n",
+       "      <th>readmitted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2278392</td>\n",
+       "      <td>8222157</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>149190</td>\n",
+       "      <td>55629189</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>&gt;30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>64410</td>\n",
+       "      <td>86047875</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>500364</td>\n",
+       "      <td>82442376</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16680</td>\n",
+       "      <td>42519267</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Steady</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101761</th>\n",
+       "      <td>443847548</td>\n",
+       "      <td>100162476</td>\n",
+       "      <td>?</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>&gt;8</td>\n",
+       "      <td>Down</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>&gt;30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101762</th>\n",
+       "      <td>443847782</td>\n",
+       "      <td>74694222</td>\n",
+       "      <td>?</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Steady</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101763</th>\n",
+       "      <td>443854148</td>\n",
+       "      <td>41088789</td>\n",
+       "      <td>?</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Down</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101764</th>\n",
+       "      <td>443857166</td>\n",
+       "      <td>31693671</td>\n",
+       "      <td>?</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101765</th>\n",
+       "      <td>443867222</td>\n",
+       "      <td>175429310</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101766 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        encounter_id  patient_nbr weight payer_code A1Cresult insulin change  \\\n",
+       "0            2278392      8222157      ?          ?      None      No     No   \n",
+       "1             149190     55629189      ?          ?      None      Up     Ch   \n",
+       "2              64410     86047875      ?          ?      None      No     No   \n",
+       "3             500364     82442376      ?          ?      None      Up     Ch   \n",
+       "4              16680     42519267      ?          ?      None  Steady     Ch   \n",
+       "...              ...          ...    ...        ...       ...     ...    ...   \n",
+       "101761     443847548    100162476      ?         MC        >8    Down     Ch   \n",
+       "101762     443847782     74694222      ?         MC      None  Steady     No   \n",
+       "101763     443854148     41088789      ?         MC      None    Down     Ch   \n",
+       "101764     443857166     31693671      ?         MC      None      Up     Ch   \n",
+       "101765     443867222    175429310      ?          ?      None      No     No   \n",
+       "\n",
+       "       readmitted  \n",
+       "0              NO  \n",
+       "1             >30  \n",
+       "2              NO  \n",
+       "3              NO  \n",
+       "4              NO  \n",
+       "...           ...  \n",
+       "101761        >30  \n",
+       "101762         NO  \n",
+       "101763         NO  \n",
+       "101764         NO  \n",
+       "101765         NO  \n",
+       "\n",
+       "[101766 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.loc[:,['encounter_id', 'patient_nbr', 'weight', 'payer_code', 'A1Cresult', 'insulin', 'change', 'readmitted']]"
+   ]
   }
  ],
  "metadata": {
