--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -762,59 +762,124 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02602cef",
+   "cell_type": "markdown",
+   "id": "f035e899",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ae0cacc7cf5414594e584bd2ebac8e2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/64 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kstou\\anaconda3\\lib\\site-packages\\scipy\\stats\\stats.py:4812: RuntimeWarning: overflow encountered in longlong_scalars\n",
-      "  (2 * xtie * ytie) / m + x0 * y0 / (9 * m * (size - 2)))\n"
-     ]
-    }
-   ],
    "source": [
-    "import pandas_profiling\n",
-    "from pandas_profiling.utils.cache import cache_file\n",
-    "profile_report = df1.profile_report(explorative=True, html={'style': {'full_width': True}})\n",
-    "profile_report.to_file('df1_profile.html')"
+    "'diag_1', 'diag_2', and 'diag_3' are addressed in feature descriptions link.\n",
+    "\n",
+    "**Generated .html report using pandas-profiler and the following code:**<br>\n",
+    "import pandas_profiling<br>\n",
+    "from pandas_profiling.utils.cache import cache_file<br>\n",
+    "profile_report = df1.profile_report(explorative=True, html={'style': {'full_width': True}})<br>\n",
+    "profile_report.to_file('df1_profile.html')<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cb41027a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     101766\n",
+       "unique        10\n",
+       "top            ?\n",
+       "freq       98569\n",
+       "Name: weight, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1.weight.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d02c06be",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We only have 3197 out of 101766 weights which equates to 96.85847925633315 % missingness.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"We only have\", 101766-98569,'out of 101766 weights which equates to',100*98569/101766,'% missingness.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c535546e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     101766\n",
+       "unique         2\n",
+       "top          Yes\n",
+       "freq       78363\n",
+       "Name: diabetesMed, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.diabetesMed.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "601c1592",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     101766\n",
+       "unique         3\n",
+       "top           NO\n",
+       "freq       54864\n",
+       "Name: readmitted, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.readmitted.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "746848ec",
+   "metadata": {},
+   "source": [
+    "**Data Cleaning:**<br>\n",
+    "<br>\n",
+    "The data is in a good enough state to move forward and handle further data cleaning as deemed necessary by the requirements of the modeling stage.<br>\n",
+    "<br>\n",
+    "The provided link to feature descriptions also shows calculated missingness percentages."
    ]
   }
  ],
