Update Diabetic Patient Readmission - Data Wrangling.ipynb

--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -768,7 +768,7 @@
    "source": [
     "'diag_1', 'diag_2', and 'diag_3' are addressed in feature descriptions link.\n",
     "\n",
-    "**Generated .html report using pandas-profiler and the following code:**<br>\n",
+    "**Generated a .html report which can be used to explore df1 in greater detail using pandas-profiler and the following code:**<br>\n",
     "import pandas_profiling<br>\n",
     "from pandas_profiling.utils.cache import cache_file<br>\n",
     "profile_report = df1.profile_report(explorative=True, html={'style': {'full_width': True}})<br>\n",
@@ -875,8 +875,60 @@
    "id": "746848ec",
    "metadata": {},
    "source": [
-    "**Data Cleaning:**<br>\n",
-    "<br>\n",
+    "**Data Cleaning:**<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3b69b593",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101766"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['encounter_id'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "513a4907",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71518"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.patient_nbr.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fb88087",
+   "metadata": {},
+   "source": [
+    "The 'encounter_id' column seems to be an ideal unique identifier for encounters.\n",
+    "\n",
+    "The 'patient_nbr' column also appears to be a unique identifier for individual patients, with which multiple encounters are sometimes recorded in this dataset.\n",
+    "\n",
     "The data is in a good enough state to move forward and handle further data cleaning as deemed necessary by the requirements of the modeling stage.<br>\n",
     "<br>\n",
     "The provided link to feature descriptions also shows calculated missingness percentages."
