--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -766,7 +766,7 @@
    "id": "f035e899",
    "metadata": {},
    "source": [
-    "'diag_1', 'diag_2', and 'diag_3' are addressed in feature descriptions link.\n",
+    "'diag_1', 'diag_2', and 'diag_3' are correspond to ICD-9-CM codes for patients' primary, secondary, and additional secondary diagnoses, respectively. This reference can be found here: https://www.cms.gov/Medicare/Coding/ICD9ProviderDiagnosticCodes/codes\n",
     "\n",
     "**Generated a .html report which can be used to explore df1 in greater detail using pandas-profiler and the following code:**<br>\n",
     "import pandas_profiling<br>\n",
