Update Frequentist Inference Case Study - Part A (3).ipynb

--- a/11. Python Statistics in EDA/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
+++ b/11. Python Statistics in EDA/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "173.47911444163503"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "173.7317666636263"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "171.8660049358649"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "1.5756704135286475"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "171.94366080916114"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "0.6736107539771146"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,19 +836,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8413444594169711\n"
+      "Shaded area = 0.8413444594169711\n"
      ]
     }
    ],
    "source": [
     "import scipy.integrate as integrate\n",
-    "\n",
-    "x = np.linspace(norm.ppf(0.001), norm.ppf(0.999), 1000)\n",
-    "y = norm.pdf(x)\n",
-    "_ = plt.plot(x,y,color='r')\n",
-    "_ = plt.fill_between(x, y, color = 'b', alpha=0.5, where = (x > norm.ppf(0.001)) & (x < 1))\n",
-    "_ = plt.title('PDF of Normal Distribution: Shaded Area Corresponds to CDF(1)')\n",
-    "_ = plt.show()\n",
     "\n",
     "def integrand(x,a,b):\n",
     "    return np.exp(-(x**2)/a)/np.sqrt(a*b)\n",
@@ -857,7 +850,16 @@
     "b = np.pi\n",
     "\n",
     "prob = integrate.quad(integrand,-5,1,args=(a,b))\n",
-    "print(prob[0])"
+    "\n",
+    "x = np.linspace(norm.ppf(0.001), norm.ppf(0.999), 1000)\n",
+    "y = norm.pdf(x)\n",
+    "_ = plt.plot(x,y,color='r')\n",
+    "_ = plt.fill_between(x, y, color = 'b', alpha=0.5, where = (x > norm.ppf(0.001)) & (x < 1))\n",
+    "_ = plt.title('PDF of Normal Distribution: Shaded Area Corresponds to CDF(1)')\n",
+    "\n",
+    "_ = plt.show()\n",
+    "\n",
+    "print(\"Shaded area =\",prob[0])"
    ]
   },
   {
@@ -883,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -914,22 +916,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "177.0"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of randomly selecting an individual with height less than or equal to 177: 84.002 %\n"
+     ]
     }
    ],
    "source": [
-    "norm.ppf(norm.cdf(177,loc=172,scale=5),loc=172,scale=5)"
+    "prob_177 = len(pop_heights[pop_heights <= 177])/50000\n",
+    "print(\"Probability of randomly selecting an individual with height less than or equal to 177:\", prob_177*100,\"%\")"
    ]
   },
   {
@@ -948,10 +948,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "1.0717590259723409e-06 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "height_cm = 2.00*100\n",
+    "print(pop_heights[pop_heights >= 200]) # No 2.00m tall individuals\n",
+    "theoretical_prob_2m = 1 - norm.cdf(200, loc = 172, scale = 5)\n",
+    "print(theoretical_prob_2m*100,\"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The chance of choosing an individual at random from this population with height >/= 200cm is 0%. There are no individuals with this height in the population.**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -995,20 +1016,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "172.7815108576788\n"
+     ]
+    }
+   ],
    "source": [
     "seed(47)\n",
-    "# take your sample now\n"
+    "# take your sample now\n",
+    "sample_50 = townsfolk_sampler(50)\n",
+    "mean_50 = np.mean(sample_50)\n",
+    "print(mean_50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.153258225264712 vs. 4.195424364433547 <--Bessel's corrected\n"
+     ]
+    }
+   ],
+   "source": [
+    "std_50 = np.std(sample_50)\n",
+    "std_50_bess = np.std(sample_50, ddof=1)\n",
+    "print(std_50,'vs.',std_50_bess,\"<--Bessel's corrected\")"
+   ]
   },
   {
    "cell_type": "code",
