--- a/11. Python Statistics in EDA/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
+++ b/11. Python Statistics in EDA/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
@@ -75,12 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import norm\n",
     "from scipy.stats import t\n",
+    "import scipy.integrate as integrate\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from numpy.random import seed\n",
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,12 +284,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ np.std() has kwarg 'ddof=' (Delta Degrees of Freedom) that is implemented as 'N - ddof' in calculation where N = no. of samples. For Bessel's correction, ddof=1."
+    "__A:__ np.std() has kwarg 'ddof=' (Delta Degrees of Freedom) that is implemented as 'n - ddof' in calculation where n = no. of samples. For Bessel's correction, ddof=1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +504,7 @@
        "173.47911444163503"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +540,7 @@
        "173.7317666636263"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above is the distribution of the means of samples of size 10 taken from our population. The Central Limit Theorem tells us the expected mean of this distribution will be equal to the population mean, and standard deviation will be $\\sigma / \\sqrt n$, which, in this case, should be approximately 1.58."
+    "The above is the distribution of the means of samples of size 10 taken from our population. The **Central Limit Theorem** tells us the expected mean of this distribution will be equal to the population mean, and standard deviation will be $\\sigma / \\sqrt n$, which, in this case, should be approximately 1.58."
    ]
   },
   {
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +638,7 @@
        "171.8660049358649"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +658,7 @@
        "1.5756704135286475"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +743,7 @@
        "171.94366080916114"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +763,7 @@
        "0.6736107539771146"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -841,8 +842,6 @@
     }
    ],
    "source": [
-    "import scipy.integrate as integrate\n",
-    "\n",
     "def integrand(x,a,b):\n",
     "    return np.exp(-(x**2)/a)/np.sqrt(a*b)\n",
     "\n",
@@ -885,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -948,30 +947,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "1.0717590259723409e-06 %\n"
+      "[] -- There are no individuals at or over 200 cm in pop_heights\n",
+      "1.0717590259723409e-06 %, or a 0.0000011% chance\n"
      ]
     }
    ],
    "source": [
-    "height_cm = 2.00*100\n",
-    "print(pop_heights[pop_heights >= 200]) # No 2.00m tall individuals\n",
+    "print(pop_heights[pop_heights >= 200],\"-- There are no individuals at or over 200 cm in pop_heights\")\n",
     "theoretical_prob_2m = 1 - norm.cdf(200, loc = 172, scale = 5)\n",
-    "print(theoretical_prob_2m*100,\"%\")"
+    "print(theoretical_prob_2m*100,\"%, or a 0.0000011% chance\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The chance of choosing an individual at random from this population with height >/= 200cm is 0%. There are no individuals with this height in the population.**"
+    "**The *actual* chance of choosing an individual at random from this population with height >/= 200cm is 0%. There are no individuals with this height in the population.**"
    ]
   },
   {
@@ -1011,12 +1009,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ For normal distribution with alpha = 0.05: Z = +/- 1.96"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1056,24 +1054,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "164.5586302035272 181.0043915118304\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(norm.ppf(0.025,loc=mean_50,scale=std_50_bess), \n",
+    "      norm.ppf(0.975,loc=mean_50, scale=std_50_bess))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1086,7 +1081,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ Assuming a normal distribution in our 50 person sample"
    ]
   },
   {
@@ -1100,29 +1095,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ \"degrees of freedom\" (df) is n-1, where n=50 for our sample size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "164.35048995674052 181.21253175861708\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t.ppf(0.025,loc=mean_50,scale=std_50_bess,df=49), \n",
+    "      t.ppf(0.975,loc=mean_50, scale=std_50_bess,df=49))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1148,13 +1140,6 @@
     "* with sampling distribution and now know how the Central Limit Theorem applies\n",
     "* with how to calculate critical values and confidence intervals"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
