Update Frequentist Inference Case Study - Part B (2).ipynb

--- a/11. Python Statistics in EDA/Frequentist Case Study/Frequentist Inference Case Study - Part B (2).ipynb
+++ b/11. Python Statistics in EDA/Frequentist Case Study/Frequentist Inference Case Study - Part B (2).ipynb
@@ -506,8 +506,8 @@
     }
    ],
    "source": [
-    "t = (ins_mean-no_ins_mean)/(std_pooled*np.sqrt((1/ins_n)+(1/no_ins_n)))\n",
-    "t"
+    "t_val = (ins_mean-no_ins_mean)/(std_pooled*np.sqrt((1/ins_n)+(1/no_ins_n)))\n",
+    "t_val"
    ]
   },
   {
@@ -516,10 +516,31 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_val = 1 - t.cdf(t_val, df=(ins_n+no_ins_n-2))\n",
+    "p_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.893299030876712 4.461230231620717e-31 <-- Very significant, almost 0\n"
+      "11.893299030876712 4.461230231620717e-31 <-- Very significant, basically 0\n"
      ]
     }
    ],
@@ -527,7 +548,7 @@
     "fast_t = ttest_ind(ins.charges,no_ins.charges)\n",
     "fast_t_val = fast_t[0]\n",
     "fast_p_val = fast_t[1]\n",
-    "print(fast_t_val, fast_p_val,\"<-- Very significant, almost 0\")"
+    "print(fast_t_val, fast_p_val,\"<-- Very significant, basically 0\")"
    ]
   },
   {
