--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -580,7 +580,7 @@
     }
    ],
    "source": [
-    "df1.loc[:,['encounter_id', 'patient_nbr', 'weight', 'payer_code', 'A1Cresult', 'insulin', 'change', 'readmitted']]"
+    "df1[['encounter_id', 'patient_nbr', 'weight', 'payer_code', 'A1Cresult', 'insulin', 'change', 'readmitted']]"
    ]
   },
   {
@@ -758,7 +758,7 @@
     }
    ],
    "source": [
-    "df1.loc[:,['encounter_id','A1Cresult', 'diabetesMed', 'readmitted', 'diag_1', 'diag_2', 'diag_3']]"
+    "df1[['encounter_id','A1Cresult', 'diabetesMed', 'readmitted', 'diag_1', 'diag_2', 'diag_3']]"
    ]
   },
   {
@@ -1352,6 +1352,16 @@
    ],
    "source": [
     "df1.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7b95c4de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_csv('clean_data.csv', index=False)"
    ]
   }
  ],
