--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -857,14 +857,14 @@
    "source": [
     "Observations made in the df1.html profile:<br>\n",
     "- 'time_in_hospital' distribution is right-tailed, with a range of 1-14 (days) and a mean of 4.40.\n",
-    "- 'payer_code' contains 39.6% '?'s. This will be monitored through the project to avoid errors.\n",
-    "- 'medical_specialty' contains 49.1% '?'s.\n",
+    "- 'payer_code' contains 39.6% '?'s. This column is removed to avoid errors.\n",
+    "- 'medical_specialty' contains 49.1% '?'s. This column is kept, but imputed 'missing' for '?'.\n",
     "- 'num_lab_procedures' has a fairly normal distribution, though 1 procedure is the most frequent at 3.2% frequency with 43 procedures at 2.8% as the second most-frequent. The distribution has a mean of 43.10 and a range of 1-132.\n",
     "- 'num_procedures' distribution is right-tailed, with a 'bump' at the max value of 6.\n",
     "- 'num_medications' distribution is right-tailed, with a range of 1-81 and mean of 16.02.\n",
     "- 'diag_' columns contain a high number of ICD-9 codes starting with 428, 276, 427, 250, and 401.\n",
     "- 'number_diagnoses' is particularly interesting, with 48.6% of values at 9, a range of 1-16, and a mean of 7.42.\n",
-    "- 'A1Cresult' is 83.3% 'None', meaning the vast majority of these encounters do not include the taking of an A1c test.\n",
+    "- 'A1Cresult' is 83.3% 'None', meaning the vast majority of these encounters do not include the taking of an HbA1c measurement.\n",
     "- 'examide' and 'citoglipton' medications were unchanged across the dataset and will therefore be dropped in our 'clean' dataset.\n",
     "- 'insulin' contains 46.6% 'No', indicating ~47% of the encounters do not involve patients who are actively taking insulin.\n",
     "- 'change' column contains 53.8% 'No', so a slight majority of these encounters involve patients whose diabetes medication is unchanged (dosage or generic name) afterwards.\n",
