Update Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb

--- a/14. Supervised Learning/14.3 Decision Tree Specialty Coffee Case Study/Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb
+++ b/14. Supervised Learning/14.3 Decision Tree Specialty Coffee Case Study/Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb
@@ -962,7 +962,7 @@
    "source": [
     "Can you admissibly conclude anything from this boxplot? Write your answer here:\n",
     "1. It appears that **higher-spending customers, AKA high-volume customers,** are more likely to order from **Hidden Farm.**\n",
-    "2. We can assume that **'spent_last_week'** will correlate with target variable **'Decision'.**\n",
+    "2. We can assume that **'spent_last_week'** will play a large part in classifying target variable **'Decision'.**\n",
     "3. *Very* few customers with no purchases in the last week (customers ordering less-frequently, or new customers) should be expected to order from Hidden Farm."
    ]
   },
